♻️ refactor pom.xml profile: Modernize GC logging for VisualVM monitoring