@@ -517,9 +517,8 @@
                 <option>-Dcom.sun.management.jmxremote.port=9010</option>
                 <option>-Dcom.sun.management.jmxremote.authenticate=false</option>
                 <option>-Dcom.sun.management.jmxremote.ssl=false</option>
-                <option>-Xlog:gc</option>
                 <option>-Xmx2048m</option>
-                <option>-XX:+PrintGCDetails</option>
+                <option>-Xlog:gc*=info,heap=debug,age=trace</option>
                 <option>-XX:NativeMemoryTracking=summary</option>
               </options>
             </configuration>
